[tool.poetry]
name = "__KEQING_CORE_NAME__"
version = "__KEQING_VERSION__"
description = "A non-database Python base OSM data parser, with SQL operation simulated."
authors = ["快乐的老鼠宝宝 <keaitianxinmail@qq.com>"]
license = "MIT"
readme = "README.md"
repository="https://github.com/OSMChina/Keqing"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ],
packages = [{include = "src/keqing"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"

[tool.poetry.group.prod.dependencies]
python = ">=3.8,<4"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.1"
pyright = "^1.1.291"
pytest = "^7.2.1"
pylint = "^2.15.10"
black = "^23.1.0"
isort = "^5.12.0"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
